--- a/dashboard_admin.html
+++ b/dashboard_admin.html
@@ -128,7 +128,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="users.html">
+                            <a class="nav-link" href="manage_users.html">
                                 <i class="bi bi-people me-2"></i> จัดการผู้ใช้
                             </a>
                         </li>
