--- a/dashboard_admin.html
+++ b/dashboard_admin.html
@@ -158,7 +158,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="reset-password.html">
+                            <a class="nav-link" href="reset_password.html">
                                 <i class="bi bi-key me-2"></i> รีเซ็ตรหัสผ่าน
                             </a>
                         </li>
